CMF 2.1.0-beta (unreleased)

  IMPORTANT NOTE:

    If you upgrade an existing CMF instance to CMF 2.1, please see
    INSTALL.txt for instructions on how to run a separate upgrade script.

  New Features

    - DirectoryView: Added 'registerDirectory' ZCML directive.
      Using the old registerDirectory method in __init__.py is now deprecated.
      See zcml.IRegisterDirectoryDirective for details.

    - DirectoryView: Added support for non-product packages.
      This introduces new registry keys. Old registry keys stored in
      persistent DirectoryView objects are updated on the fly.
      (http://www.zope.org/Collectors/CMF/467)

    - Document: Added two new methods for safety belt handling.

    - setup handlers: Improved properties handler.
      It now works with properties using a default_charset other than UTF-8.

    - Merged patches from Martin Aspeli to enable generating events before
      and after DCWorkflow transitions, and in the 'notify' methods of the
      workflow tool (http://www.zope.org/Collectors/CMF/461).

  Bug Fixes

    - CMFUid.UniqueIdHandlerTool: Touching the internal UID value on a
      content item will not cause reindexing all indices anymore, only the
      specific UID index will be touched.
      (http://www.zope.org/Collectors/CMF/469)

    - CMFCore.MembershipTool: Fixed inconsistent behavior where member lookup
      would take all user folders up to the Zope root into account whereas
      member area creation would not.

    - CMFCore.MembershipTool/CMFDefault.MembershipTool: when using an
      object without a __nonzero__ but with a __len__ (ala
      CMFBTreeFolder) as a member folder, the createMemberArea method
      would believe there was no members folder if the folder was
      empty, and so would fail (change "not membersfolder" to
      "membersfolder is not None") .

    - CMFDefault.File and CMFDefault.Image: Restored ZMI Cache tab which was
      lost in CMF 1.6.
