@@ -1,31 +1,0 @@
-Converting skins to views:
-
-  [x] @@calendar_day.html:
-
-      [x] calendar_day_view.py -> CalendarView.viewDay
-                                  CalendarView.formattedDate
-                                  CalendarView.eventsForDay
-                                  CalendarView.previousDayURL
-                                  CalendarView.nextDayURL
-      [x] calendar_day_view_template.pt -> templates/calendar_day.pt
-      [x] getEndAsString.py -> CalendarView._getEndAsString
-      [x] getStartAsString.py -> CalendarView._getStartAsString
-
-  [x] @@calendar_widget:
-
-      [x] calendarBox.pt -> templates/calendar_widgets.pt
-      [x] getDaysClass.py -> CalendarBoxView.getDaysClass
-      [x] getMonthAndYear.py -> CalendarBoxView.getMonthAndYear
-      [x] getNextMonthLink.py -> CalendarBoxView.getNextMonthLink
-      [x] getPreviousMonthLink.py -> CalendarBoxView.getPreviousMonthLink
-
-  [x] IEvent @@view.html:
-
-      [x] event_view.py -> EventView
-      [x] event_view_template.pt -> formlib based
-
-  [x] IMutableEvent @@edit.html:
-
-      [x] event_edit_form.py -> EventEditView
-      [x] event_edit_template.pt -> formlib based
-      [x] event_edit_control.py -> formlib based
