@@ -5,23 +5,23 @@
  <property name="title" i18n:translate="">Event</property>
  <property name="description"
     i18n:translate="">Events are objects for use in Calendar topical queries on the catalog.</property>
- <property name="content_icon">event_icon.gif</property>
+ <property name="content_icon">++resource++event_icon.gif</property>
  <property name="content_meta_type">CMF Event</property>
  <property name="product"></property>
  <property name="factory">cmf.calendar.event</property>
- <property name="immediate_view">event_edit_form</property>
+ <property name="immediate_view">edit.html</property>
  <property name="global_allow">True</property>
  <property name="filter_content_types">True</property>
  <property name="allowed_content_types"/>
  <property name="allow_discussion">False</property>
- <alias from="(Default)" to="event_view"/>
- <alias from="view" to="event_view"/>
+ <alias from="(Default)" to="@@view.html"/>
+ <alias from="view" to="@@view.html"/>
  <action title="View" action_id="view" category="object" condition_expr=""
-    url_expr="string:${object_url}/event_view" visible="True">
+    url_expr="string:${object_url}" visible="True">
   <permission value="View"/>
  </action>
  <action title="Edit" action_id="edit" category="object" condition_expr=""
-    url_expr="string:${object_url}/event_edit_form" visible="True">
+    url_expr="string:${object_url}/edit.html" visible="True">
   <permission value="Change portal events"/>
  </action>
 </object>
