@@ -1,7 +1,0 @@
-<?xml version="1.0"?>
-<object name="Event">
- <alias from="(Default)" to="@@view.html"/>
- <alias from="event_edit_form" to="@@edit.html"/>
- <alias from="event_view" to="@@view.html"/>
- <alias from="view" to="@@view.html"/>
-</object>
